manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reviewer-api
  namespace: prod
  labels:
    app: reviewer-api
spec:
  type: ClusterIP
  selector:
    app: reviewer-api
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: reviewer-ui
  namespace: prod
  labels:
    app: reviewer-ui
spec:
  type: ClusterIP
  selector:
    app: reviewer-ui
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
