manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewer-api
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - api.reviewer.51.105.22.227.nip.io
  rules:
  - host: api.reviewer.51.105.22.227.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reviewer-api
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewer-ui
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - ui.reviewer.51.105.22.227.nip.io
  rules:
  - host: ui.reviewer.51.105.22.227.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reviewer-ui
            port:
              number: 80
